--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -1,2 +1,5 @@
 <h1>Welcome to Bike Berlin</h1>
-<p>Your source for used bikes in Berlin</p>
+<h2>Your source for used bikes in Berlin</h2>
+<div class="main-image">
+  <%= image_tag("bike.jpg", class: "img-responsive") %>
+</div>
