--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -1,3 +1,76 @@
 // Place all the styles related to the simple_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  position: relative;
+  font-family: Roboto, Arial;
+  background: #f4f9f9;
+  margin: 0;
+}
+//
+.navbar-nav {
+  background: #1cffe4;
+  text-align: center;
+  margin: auto;
+//   padding: 10px;
+//   margin:0px;
+//   text-align: center;
+//   float:none;
+}
+
+//
+.navbar-nav li {
+//    display: inline-block;
+//    list-style-type: none;
+   padding: 0 40px;
+//    text-transform: uppercase;
+ }
+//
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+    color: #e06f0d;
+}
+//  a {
+//    color: black;
+//    text-decoration: none;
+//  }
+//
+
+.nav-item {
+  text-transform: uppercase;
+}
+
+h1 {
+  font-size: 3em;
+  text-align: center;
+  margin-top: 50px;
+}
+
+h2 {
+  text-align: center;
+  font-size: 1.25em;
+}
+
+p {
+  margin: 30px auto;
+  width: 80%;
+  text-align: center;
+
+}
+
+.main-image {
+  text-align: center;
+  margin-top: 40px;
+}
+
+img {
+  width: 40%;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width:100%;
+  background: black;
+  color: white;
+}
