--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,9 @@
             <a class="nav-link" href="/simple_pages/index">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/products">Products</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/simple_pages/about">About</a>
           </li>
           <li class="nav-item">
