--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -7,6 +7,10 @@
       <%= @product.name %></h1>
       <p><strong>Description:</strong>
       <%= @product.description %></p>
+      <p><strong>Color:</strong>
+        <%= @product.colour %></p>
+      <p><strong>Price:</strong>
+        <%= @product.price %></p>
     </div>
     <div class="col-6">
       <img src="<%= @product.image_url %>">
@@ -15,6 +19,6 @@
 
     <%= link_to 'Edit', edit_product_path(@product) %> |
     <%= link_to 'Back', products_path %>
-  
+
 
 </div>
