--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,3 +1,8 @@
+
+<section class="product-form container">
+
+
+
 <%= form_with(model: product, local: true) do |form| %>
   <% if product.errors.any? %>
     <div id="error_explanation">
@@ -11,34 +16,83 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
-  </div>
+  <!-- <form class="container">
+    <div class="form-group">
+      <label for="product-name">Name</label>
+      <input type="text" class="form-control" id="product-name">
+    </div>
+    <div class="form-group">
+      <label for="product-description">Product Description</label>
+      <textarea type="text" class="form-control" id="product-description"></textarea>
+    </div>
+    <div class="form-group">
+      <label for="product-image">Image URL</label>
+      <input type="text" class="form-control" id="product-image">
+    </div>
+    <div class="form-group">
+      <label for="product-color">Color</label>
+      <input type="text" class="form-control" id="product-color">
+      <div class="form-group">
+        <label for="product-price">Price</label>
+        <input type="text" class="form-control" id="product-price">
+      </div>
+    </div>
+  </form> -->
 
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description %>
-  </div>
+    <div class="field">
+      <%= form.label :name %>
+      <%= form.text_field :name, class: "form-control" %>
+    </div>
 
-  <div class="field">
-    <%= form.label :image_url %>
-    <%= form.text_field :image_url %>
-  </div>
+    <div class="field">
+      <%= form.label :description %>
+      <%= form.text_area :description, class: "form-control" %>
+    </div>
 
-  <div class="field">
-    <%= form.label :colour %>
-    <%= form.text_field :colour %>
-  </div>
+    <div class="field">
+      <%= form.label :image_url %>
+      <%= form.text_field :image_url, class: "form-control" %>
+    </div>
 
-  <div class="field">
-    <%= form.label :price %>
-    <%= form.text_field :price %>
-  </div>
+    <div class="field">
+      <%= form.label :colour %>
+      <%= form.text_field :colour, class: "form-control" %>
+    </div>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+    <div class="field">
+      <%= form.label :price %>
+      <%= form.text_field :price, class: "form-control" %>
+    </div>
+
+    <div class="actions">
+      <%= form.submit class: "btn btn-secondary" %>
+    </div>
+
 
 
 <% end %>
+
+</section>
+<!--
+<form class="container">
+  <div class="form-group">
+    <label for="product-name">Product Name</label>
+    <input type="text" class="form-control" id="product-name">
+  </div>
+  <div class="form-group">
+    <label for="product-description">Product Description</label>
+    <textarea type="text" class="form-control" id="product-description"></textarea>
+  </div>
+  <div class="form-group">
+    <label for="product-image">Image URL</label>
+    <input type="text" class="form-control" id="product-image">
+  </div>
+  <div class="form-group">
+    <label for="product-color">Color</label>
+    <input type="text" class="form-control" id="product-color">
+    <div class="form-group">
+      <label for="product-price">Price</label>
+      <input type="text" class="form-control" id="product-price">
+    </div>
+  </div>
+</form> -->
