--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/simple_pages/contact">Contact</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/orders/index">Cart</a>
+          </li>
         </ul>
       </div>
 </nav>
