--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
             <a class="nav-link" href="/simple_pages/contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/orders/index">Cart</a>
+            <a class="nav-link" href="/orders">Cart</a>
           </li>
         </ul>
       </div>
