--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,18 +7,7 @@
 
   <div class="container-fluid">
     <div class="row">
-      <% @products.each do |product| %>
-        <div class="col-sm-4">
-          <div class="product-card">
-            <img class="product-image" src="<%= product.image_url %>" alt="">
-            <h3 class="product-name"><%= link_to product.name, product %></h3>
-            <p class="product-color"><%= product.colour %></p>
-            <h2 class="product-price">$<%= product.price %></h2>
-            <p><%= link_to 'Show', product %> | <span><%= link_to 'Edit', edit_product_path(product) %></span> |
-            <span><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></span></p>
-          </div>
-        </div>
-      <% end %>
+      <%= render @products %>
     </div>
   </div>
 
