--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,38 @@
  *= require_tree .
  *= require_self
  */
+ body {
+   position: relative;
+   font-family: Roboto, Arial;
+   background: #f4f9f9;
+   margin: 0;
+ }
+ 
+ .navbar-nav {
+   background: #1cffe4;
+   text-align: center;
+   margin: auto;
+ }
+
+ //
+ .navbar-nav li {
+    padding: 0 40px;
+  }
+ //
+ .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+     color: #e06f0d;
+ }
+
+
+ .nav-item {
+   text-transform: uppercase;
+ }
+
+ footer {
+   position: fixed;
+   bottom: 0;
+   left: 0;
+   width:100%;
+   background: black;
+   color: white;
+ }
