--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -1,43 +1,9 @@
 // Place all the styles related to the simple_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-body {
-  position: relative;
-  font-family: Roboto, Arial;
-  background: #f4f9f9;
-  margin: 0;
-}
-//
-.navbar-nav {
-  background: #1cffe4;
-  text-align: center;
-  margin: auto;
-//   padding: 10px;
-//   margin:0px;
-//   text-align: center;
-//   float:none;
-}
 
 //
-.navbar-nav li {
-//    display: inline-block;
-//    list-style-type: none;
-   padding: 0 40px;
-//    text-transform: uppercase;
- }
-//
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-    color: #e06f0d;
-}
-//  a {
-//    color: black;
-//    text-decoration: none;
-//  }
-//
 
-.nav-item {
-  text-transform: uppercase;
-}
 
 h1 {
   font-size: 3em;
@@ -66,11 +32,43 @@ img {
   width: 40%;
 }
 
-footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width:100%;
-  background: black;
-  color: white;
+//Landing Page
+
+#landing_page_body {
+  background-color: white;
+}
+
+.carousel-prev, .carousel-next {
+  background-color: black;
+}
+
+.carousel-image {
+  // height: 100vh;
+  max-width: 100%;
+}
+
+.carousel-name {
+  color: black;
+}
+
+.carousel-price {
+  color: black;
+}
+
+.carousel {
+  max-width: 850px;
+  margin: auto;
+  height: 90%;
+  max-height: 90vh;
+}
+
+.carousel-caption {
+  padding-bottom: 50px;
+}
+
+.site-entrance {
+  color: black;
+  text-align: center;
+  z-index: auto;
+  padding-top: 20px;
 }
