--- a/app/views/simple_pages/landing_page.html.erb
+++ b/app/views/simple_pages/landing_page.html.erb
@@ -1,2 +1,25 @@
-<h2>Featured Product</h2>
-<%= @featured_product.name %>
+<a href="/simple_pages/index"><h5 class="site-entrance">Enter Site >>></h5></a>
+<section class="carousel">
+  <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <% @products.each do |product| %>
+        <li data-target="#carouselExampleIndicators" data-slide-to="<%= @products.index(product) %>" class=<%= " active" if product == @products.first %>></li>
+      <% end %>
+      </ol>
+    </div>
+    <div class="carousel-inner">
+      <% @products.each do |product| %>
+        <%= render partial: "carousel", locals: {product: product} %>
+      <% end %>
+    </div>
+</section>
+
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon carousel-prev" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon carousel-next" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+</div>
