--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,19 +21,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="/simple_pages/index">Home <span class="sr-only">(current)</span></a>
+            <%= link_to 'Home', simple_pages_index_path, :class => "nav-link" %> <span class="sr-only">(current)</span>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/products">Products</a>
+            <%= link_to 'Products', products_path, :class => "nav-link" %>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/simple_pages/about">About</a>
+            <%= link_to 'About', simple_pages_about_path, :class => "nav-link" %>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/simple_pages/contact">Contact</a>
+          <%= link_to 'Contact', simple_pages_contact_path, :class => "nav-link" %>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/orders">Orders</a>
+            <%= link_to 'Orders', orders_path, :class => "nav-link" %>
           </li>
         </ul>
       </div>
