--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,11 @@
           <li class="nav-item">
             <%= link_to 'Orders', orders_path, :class => "nav-link" %>
           </li>
+          <form class="form-inline search-box">
+            <%= form_with(url: products_path, method: 'get', local: true) do |form| %>
+              <%= form.text_field :q, id: 'q', value: params[:q], class: 'form-control mr-sm-2', type: 'search', placeholder:'Search' %><%= form.submit 'Search', class:'btn btn-outline-success my-2 my-sm-0', type:'submit' %>
+            <% end %>
+          </li>
         </ul>
       </div>
 </nav>
