--- a/app/views/simple_pages/contact.html.erb
+++ b/app/views/simple_pages/contact.html.erb
@@ -1,4 +1,24 @@
+<%= flash[:notice] %>
+
 <h1>Contact Us</h1>
 <p>Address: Chausseestrasse 3014, Mitte, Berlin, DE </p>
 <p>Phone: (+49 30) 19 4 49 </p>
 <p>Instagram: @berlinbikes</p>
+
+<div class="container contact-form">
+  <%= form_with(url:"/simple_pages/thank_you", method: "post", local: true) do |form| %>
+    <div class="form-group">
+      <%= form.label :name %>
+      <%= form.text_field :name, class: "form-control", placeholder: "Enter Name" %>
+    </div>
+    <div class="form-group">
+      <%= form.label :email %>
+      <%= form.text_field :email, class: "form-control", placeholder: "Enter Email" %>
+    </div>
+    <div class="form-group">
+      <%= form.label :message %>
+      <%= form.text_area :message, class: "form-control", placeholder: "Enter Message", rows: 5 %>
+    </div>
+  <%= form.submit "Send", class: "form_label btn btn-secondary" %>
+  <% end %>
+</div>
