--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,10 +39,22 @@
             <%= form_with(url: products_path, method: 'get', local: true) do |form| %>
               <%= form.text_field :q, id: 'q', value: params[:q], class: 'form-control mr-sm-2', type: 'search', placeholder:'Search' %><%= form.submit 'Search', class:'btn btn-outline-success my-2 my-sm-0', type:'submit' %>
             <% end %>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+          <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "nav-link" %>
           </li>
+          <% else %>
+          <li class="nav-item">
+            <%= link_to 'Login', new_user_session_path, class: "nav-link" %>
+          </li>
+          <% end %>
         </ul>
       </div>
 </nav>
+
+    <p id="notice"><%= notice %></p>
 
     <%= yield %>
     <footer>
