--- a/app/views/layouts/landing_page.html.erb
+++ b/app/views/layouts/landing_page.html.erb
@@ -15,6 +15,17 @@
 
   <body id="landing_page_body">
 
+    <% if notice %>
+      <p id="notice" class="alert alert-primary"><%= notice %></p>
+    <% end %>
+
+    <% if alert %>
+      <p id="alert" class="alert alert-primary"><%= alert %></p>
+    <% end %>
+
     <%= yield %>
 
+    <script type="text/javascript">
+      $ ("#notice").fadeOut(300)
+    </script>
   </body>
