--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -11,6 +11,35 @@
   width: 100%;
 }
 
+.comment-area {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.comment-area p {
+  text-align: center;
+}
+
+.highest-comment {
+  border: 1px solid #f4f5f7;
+  margin: 5px;
+  color: green;
+  background-color: white;
+}
+
+.lowest-comment {
+  border: 1px solid #f4f5f7;
+  margin: 5px;
+  text-align: center;
+  color: red;
+  background-color: white;
+}
+
+.show-links {
+  font-size: 1.5em;
+  text-align: center;
+}
+
 //PRODUCTS-INDEX
 .products-all .btn {
   background-color: white;
