--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="product-show container">
   <div class="row">
-    <div class="col-6">
+    <div class="col-md-12 col-lg-6">
       <h1>
       <%= @product.name %></h1>
       <p><strong>Description:</strong>
@@ -12,13 +12,29 @@
       <p><strong>Price:</strong>
         <%= number_to_currency(@product.price.to_f)%></p>
     </div>
-    <div class="col-6">
+    <div class="col-md-12 col-lg-6">
       <img src="<%= @product.image_url %>">
     </div>
   </div>
 
-    <%= link_to 'Edit', edit_product_path(@product) %> |
-    <%= link_to 'Back', products_path %>
+  <div class="container comment-area">
+    <div class="highest-comment">
+      <p>Highest Rated Comment: <%= @product.highest_rating_comment.body %>
+      - Rating: <%= @product.highest_rating_comment.rating %></p>
+    </div>
+    <div class="lowest-comment">
+      <p>Lowest Rated Comment: <%= @product.lowest_rating_comment.body %>
+      - Rating: <%= @product.lowest_rating_comment.rating %></p>
+    </div>
+
+  </div>
+
+
+    <div class="container show-links">
+      <%= link_to 'Edit', edit_product_path(@product) %> |
+      <%= link_to 'Back', products_path %>
+    </div>
+
 
 
 </div>
