--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -60,6 +60,16 @@
   text-align: left;
 }
 
+.customer-review-body span {
+  margin-left: 10px;
+}
+
+.destroy-icon img {
+  width: 10px;
+  height: 10px;
+  vertical-align: middle;
+}
+
 .digg_pagination {
   cursor: default;
   /* self-clearing method: */ }
