--- a/app/views/products/_comments.html.erb
+++ b/app/views/products/_comments.html.erb
@@ -11,9 +11,15 @@
       </div>
       <div class="rated star-rating" data-score="<%= comment.rating %>"></div>
       <div class="customer-review-body">
-        <p><%= comment.body %></p>
+        <p><%= comment.body %>
+          <% if signed_in? && current_user.admin? %>
+            <span class="destroy-icon"><%= link_to image_tag('si-glyph-delete.svg', alt:"Destroy").html_safe, product_comment_path(comment.product, comment), method: :delete, data: {confirm: 'Are you sure?'} %></span>
+          <% end %>
+        </p>
+
       </div>
     </div>
+
 
   <% end %>
 
