--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,49 +10,67 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/css?family=Lalezar|Orbitron|Passion+One|Squada+One" rel="stylesheet">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+    <div class="specials-banner">
+      <div class="special-1">
+          <h1>FREE SHIPPING<span> on orders over $200</span></h1>
+      </div>
+    </div>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bike-navbar">
+      <%= link_to 'BIKE/BERLIN', simple_pages_index_path, :class => "navbar-brand bike-nav-brand" %>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-dark navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <%= link_to 'Home', simple_pages_index_path, :class => "nav-link" %> <span class="sr-only">(current)</span>
+            <%= link_to 'Bikes', products_path, :class => "nav-link" %>
           </li>
-          <li class="nav-item">
-            <%= link_to 'Products', products_path, :class => "nav-link" %>
-          </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link" href="#">Blog</a>
+          </li> -->
+        </ul>
+        <ul id="nav-right" class="navbar-nav ml-auto">
           <li class="nav-item">
             <%= link_to 'About', simple_pages_about_path, :class => "nav-link" %>
           </li>
           <li class="nav-item">
-          <%= link_to 'Contact', simple_pages_contact_path, :class => "nav-link" %>
+            <%= link_to 'Contact', simple_pages_contact_path, :class => "nav-link" %>
           </li>
-          <li class="nav-item">
-            <%= link_to 'Orders', orders_path, :class => "nav-link" %>
-          </li>
+          <% if user_signed_in? %>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Account
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <%= link_to 'Profile', current_user, :class => "dropdown-item" %>
+                    <%= link_to 'Orders', orders_path, :class => "dropdown-item" %>
+                    <% if current_user && current_user.admin? %>
+                      <%= link_to 'Users', users_path, :class => "dropdown-item" %>
+                    <% end %>
+                  <div class="dropdown-divider"></div>
+                    <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+                </div>
+              </li>
+            <% else %>
+              <li class="nav-item">
+                <%= link_to 'Login', new_user_session_path, class: "nav-link" %>
+              </li>
+            <% end %>
           <form class="form-inline search-box">
             <%= form_with(url: products_path, method: 'get', local: true) do |form| %>
-              <%= form.text_field :q, id: 'q', value: params[:q], class: 'form-control mr-sm-2', type: 'search', placeholder:'Search' %><%= form.submit 'Search', class:'btn btn-outline-success my-2 my-sm-0', type:'submit' %>
+              <%= form.text_field :q, id: 'q', value: params[:q], class: 'form-control mr-sm-2', type: 'search', placeholder:'Search' %><%= form.submit 'Search', class:'btn btn-outline-success my-2 my-sm-0 home_page_search_button', type:'submit' %>
             <% end %>
         </ul>
-        <ul class="navbar-nav ml-auto">
-          <% if user_signed_in? %>
-          <li class="nav-item">
-            <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "nav-link" %>
-          </li>
-          <% else %>
-          <li class="nav-item">
-            <%= link_to 'Login', new_user_session_path, class: "nav-link" %>
-          </li>
-          <% end %>
-        </ul>
       </div>
-</nav>
+    </nav>
 
     <% if notice %>
       <p id="notice" class="alert alert-primary"><%= notice %></p>
