--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,8 +1,10 @@
 
-<h1>Order Information</h1>
+
 
 <div class="container order-info">
+
   <div class="order-info-id">
+    <h1>Order Information</h1>
     <h3 class="order-id">Order ID: <%= @order.id %></h3>
     <strong>Total Price: </strong><%= number_to_currency((@order.product.price * 1.13).to_f)%>
   </div>
@@ -18,6 +20,11 @@
         <h2>Product Price: <%= number_to_currency(@order.product.price.to_f) %></h2>
       </div>
     </div>
+  </div>
+
+
+  <div class="container show-links">
+    <%= link_to 'Back', orders_path %>
   </div>
 
 
