--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,9 +1,9 @@
-<p id="notice"><%= notice %></p>
+
 
 <div class="product-show container">
   <div class="row">
     <div class="col-md-12 col-lg-6">
-      <h1>
+      <h1 class= "product-show-name">
       <%= @product.name %></h1>
       <p class="product-show-description"><strong>Description:</strong>
       <%= @product.description %></p>
