--- a/app/assets/javascripts/site.js.erb
+++ b/app/assets/javascripts/site.js.erb
@@ -16,3 +16,7 @@ $(document).on('turbolinks:load', function(){
       }
   });
 });
+
+setTimeout(function(){
+$("#notice").fadeOut(3000);}
+,1000);
