--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -4,9 +4,15 @@
 
 //PRODUCTS-SHOW
 
+.product-show-name {
+  margin-top: 70px;
+}
 
 .product-show-description {
   text-align: left;
+  font-size: 0.75em;
+  line-height: 23px;
+  font-family: Roboto;
 }
 
 .product-show-image {
@@ -24,10 +30,6 @@
   margin-bottom: 40px;
 }
 
-// .comment-area p {
-//   text-align: left;
-// }
-
 .comment-area h4 {
   text-align: left;
   margin-top: 40px;
@@ -39,6 +41,7 @@
   margin: 5px;
   color: green;
   background-color: white;
+  text-align: center;
 }
 
 .lowest-comment {
@@ -69,6 +72,22 @@
 }
 
 //PRODUCTS-INDEX
+
+.products-index {
+  width: 100vw;
+  background: url('eric-muhr-1311273-unsplash.jpg') no-repeat center;
+}
+
+.products-all {
+  padding-bottom: 50px;
+  background-color: white;
+}
+
+.products-all h1 {
+  margin-left: 50px;
+  margin-bottom: 20px;
+}
+
 .products-all .btn {
   background-color: white;
 }
@@ -80,26 +99,39 @@
 
 .products-all .product-card {
   border: 2px solid white;
-  margin-left: 5px;
-  background-color: #e0fffb
+  margin-left: 15px;
+  background-color: black;
+  text-align: center;
 }
 
 .products-all .new-product-button {
-  margin: 30px 0 50px 30px;
+  margin: 30px 0 0px 30px;
 
 }
 
 .products-all .product-name {
   text-transform: uppercase;
   text-align: center;
+  font-size: 2em;
 }
+
+  .products-all .product-name a {
+    color: white;
+  }
+
+.products-all .product-color {
+  font-family: Orbitron;
+  font-size: 1em;
+  color: yellow;
+}
+
 .product-name :hover{
   color: #1cffe4
 }
 
 
 .products-all .product-price {
-  color: #e06f0d;
+  color: #f4d942;
   font-size: 1.35em;
 }
 
