--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -15,3 +15,56 @@
 .remember-me-label {
   display: inline;
 }
+
+.account-info-page h1 {
+  margin-top: 25px;
+}
+
+.account-info-page p {
+  font-size: 1em;
+}
+
+.account-info {
+  margin-bottom: 50px;
+}
+
+.admin-yes {
+  color: red;
+  font-size: 0.5em;
+}
+
+.users-table-page th{
+  background-color: yellow;
+}
+
+.users-table-page h1 {
+  margin-top: 25px;
+  font-family: 'Squada One'
+}
+
+.users-table-page tr {
+    padding-top: 20px;
+    font-family: 'Squada One'
+}
+
+.users-table-page td {
+  font-size: 1.2em;
+  padding: 10px 50px 20px 0px;
+  font-family: 'Squada One'
+
+}
+
+
+.new-user-button  {
+  font-size: 1.5em;
+  background: yellow;
+}
+
+
+.edit-user-page {
+  margin-top: 25px;
+}
+
+.edit-user-links {
+  margin-top: 25px;
+}
