--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,12 @@
-<h1>Sign up Here</h1>
+
 
 <div class="container sign-up">
+  <h1>Create a Bike Berlin Account</h1> 
+
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
   <form class="form-signin" >
+
 
     <div class="field">
       <%= f.label :email, for: 'inputEmail', class: 'sr-only' %><br />
