--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -1,5 +1,35 @@
-<h1>Welcome to Bike Berlin</h1>
-<h2>Your source for used bikes in Berlin</h2>
-<div class="main-image">
-  <%= image_tag("bike.jpg", class: "img-responsive") %>
-</div>
+<div class="home_page_landing_section"><!-- grey part -->
+  <div class="home_page_landing"><!-- white part -->
+    <div id="landingPageCarousel" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <% @products.each do |product| %>
+          <%= render partial: "carousel", locals: {product: product} %>
+        <% end %>
+      </div>
+      <a class="carousel-control-prev" href="#landingPageCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#landingPageCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+ </div>
+
+ <div class="home_page_features">
+    <div class="row">
+      <div class="col-sm home_page_feature home_feature_one">
+        <p>50% off all gloves</p>
+      </div>
+      <div class="col-sm home_page_feature home_feature_two">
+        <p>Learn about our partnership with Airbnb</p>
+      </div>
+      <div class="col-sm home_page_feature home_feature_three">
+        <p>Sale & Clearance Items</p>
+      </div>
+    </div>
+  </div>
+
+<%= params[:example_key] %>
