--- a/app/views/simple_pages/landing_page.html.erb
+++ b/app/views/simple_pages/landing_page.html.erb
@@ -1,20 +1,22 @@
-<a href="/simple_pages/index"><h5 class="site-entrance">Enter Site >>></h5></a>
+<div class="container landing-page-body">
+  <div class="row landing-page-row">
+    <div class="col-md landing-page-col landing-page-box">
+      <h1>BIKE/BERLIN</h1>
+      <div class=" landing-page-carousel">
+        <%= image_tag("josh-nuttall-286507-unsplash.jpg") %>
+      </div>
+    </div>
+    <div class="col-md landing-page-col landing-page-right ">
+      <div class="landing-page-text">
+        <h2>Affordable. Environmentally-Friendly. Berlin-Owned.</h2>
+        <h3>Need we say more?</h3>
+        <!-- <h1 class="shop-button-area"> -->
+        <div class="shop-button-area">
+          <a href="/simple_pages/index" class="">  <h1 class="shop-button">SHOP</h1></a>
+        </div>
 
-
-<div id="landingPageCarousel" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <% @products.each do |product| %>
-      <%= render partial: "carousel", locals: {product: product} %>
-    <% end %>
+        <!-- </h1> -->
+      </div>
+    </div>
   </div>
-  <a class="carousel-control-prev" href="#landingPageCarousel" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#landingPageCarousel" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
 </div>
-
-<%= params[:example_key] %>
