--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing User</h1>
+<div class="container">
+  <h1 class="edit-user-page">Editing User</h1>
 
-<%= render 'form', user: @user %>
+  <%= render 'form', user: @user %>
+  <div class="edit-user-links">
+    <%= link_to 'Show', @user %> |
+    <%= link_to 'Back', users_path %>
+  </div>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+</div>
