--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,29 +1,39 @@
-<p id="notice"><%= notice %></p>
 
-<h1>Users</h1>
+<div class="container users-table-page">
+  <h1>Users</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @users.each do |user| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= user.first_name %></td>
-        <td><%= user.last_name %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>First name</th>
+        <th>Last name</th>
+        <th>Email Address</th>
+        <th colspan="1"></th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @users.each do |user| %>
+        <tr>
+          <td class="user-first"><%= user.first_name %></td>
+          <td class="user-last"><%= user.last_name %></td>
+          <td class="user-email"><%= user.email %></td>
+          <% if user.admin? %>
+            <td class= "admin-yes">Admin</td>
+          <% else %>
+            <td class= "admin-no">User</td>
+          <% end %>
+          <td><%= link_to 'Show', user %></td>
+          <td><%= link_to 'Edit', edit_user_path(user) %></td>
+          <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New User', new_user_path %>
+  <br>
+  <% if current_user && current_user.admin? %>
+    <%= link_to 'New User', new_user_path, class: "new-user-button" %>
+  <% end %>
+</div>
