--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,6 +11,7 @@
         <%= @product.colour %></p>
       <p class="product-show-description"><strong>Price:</strong>
         <%= number_to_currency(@product.price.to_f)%></p>
+      <%= render partial: "shared/stripe_checkout_button" %>
     </div>
     <div class="col-md-12 col-lg-6">
       <img src="<%= @product.image_url %>" class="product-show-image">
