--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,7 +11,11 @@
         <%= @product.colour %></p>
       <p class="product-show-description"><strong>Price:</strong>
         <%= number_to_currency(@product.price.to_f)%></p>
-      <%= render partial: "shared/stripe_checkout_button" %>
+      <%= form_with(url: '/payments/create', method: "post", local: "true") do |form| %>
+        <%= render partial: "shared/stripe_checkout_button" %>
+        <%= hidden_field_tag(:product_id, @product.id) %>
+      <% end %>
+
     </div>
     <div class="col-md-12 col-lg-6">
       <img src="<%= @product.image_url %>" class="product-show-image">
