--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -18,7 +18,7 @@
 
     </div>
     <div class="col-md-12 col-lg-6">
-      <img src="<%= @product.image_url %>" class="product-show-image">
+      <img src="<%= @product.image_url %>" class="product-show-image img-zoom" data-zoom-image="<%= @product.image_url %>">
     </div>
   </div>
 
