--- a/app/assets/javascripts/site.js.erb
+++ b/app/assets/javascripts/site.js.erb
@@ -15,6 +15,9 @@ $(document).on('turbolinks:load', function(){
         return $(this).attr('data-score');
       }
   });
+
+  $('.img-zoom').elevateZoom();
+
 });
 
 setTimeout(function(){
