--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -43,6 +43,11 @@
   padding-left: 0px;
 }
 
+.most-recent-review {
+  padding-left: 15px;
+  background-color: #e3fcf9;
+}
+
 .customer-reviews {
   padding-left: 15px;
   border-top: 1px solid #1cffe4;
