--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -15,9 +15,9 @@ h2 {
   font-size: 1.25em;
 }
 
-.home_page_landing_section {
-  background: url('eric-muhr-1311273-unsplash.jpg') no-repeat center;
-}
+// .home_page_landing_section {
+//   background: url('eric-muhr-1311273-unsplash.jpg') no-repeat center;
+// }
 
 .home_page_landing {
   width: 60%;
