--- a/app/views/products/_comments.html.erb
+++ b/app/views/products/_comments.html.erb
@@ -1,26 +1,12 @@
 <div class="container product-reviews">
   <h4 class="customer-review-header">Customer Reviews</h4>
+  <div class="most-recent-review">
+  </div>
   <% @comments.each do |comment| %>
     <div class=" customer-reviews">
-      <div class="user-customer">
-        <% if comment.user.first_name %>
-          <p><%= image_tag("user.png", class: "avatar") %><%= comment.user.first_name %><small><em><%= "#{time_ago_in_words(comment.created_at)} ago"%></em></small></p>
-        <% else %>
-          <p><%= image_tag("user.png", class: "avatar") %>Anonymous<small><em><%= "#{time_ago_in_words(comment.created_at)} ago"%></em></small></p>
-        <% end %>
-      </div>
-      <div class="rated star-rating" data-score="<%= comment.rating %>"></div>
-      <div class="customer-review-body">
-        <p><%= comment.body %>
-          <% if signed_in? && current_user.admin? %>
-            <span class="destroy-icon"><%= link_to image_tag('delete.png', alt:"Destroy").html_safe, product_comment_path(comment.product, comment), method: :delete, data: {confirm: 'Are you sure?'} %></span>
-          <% end %>
-        </p>
 
-      </div>
+      <%= render comment %>
     </div>
-
-
   <% end %>
 
   <div class="digg_pagination">
