--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -39,7 +39,7 @@
     <% end %>
 
     <% if @product.average_rating %>
-      <div class="average-rating" id="average-rating">
+      <div class="average-rating" id="average_rating">
         <div class="rated star-rating" data-score="<%= @product.average_rating %>">Average Rating: </div>
       </div>
     <% end %>
