--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -38,9 +38,9 @@
       </div>
     <% end %>
 
-    <% if @product.average_rating %>
-      <div class="average-rating" id="average_rating">
-        <div class="rated star-rating" data-score="<%= @product.average_rating %>">Average Rating: </div>
+    <% if @product.average_rating > 0 %>
+      <div class="average-rating" >
+        <div class="rated star-rating" id="average_rating" data-score="<%= @product.average_rating %>">Average Rating: </div>
       </div>
     <% end %>
 
