--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,5 @@
 
-
+<% cache @product do %>
 <div class="product-show container">
   <div class="row">
     <div class="col-md-12 col-lg-6">
@@ -45,7 +45,6 @@
     <% end %>
 
 
-
     <%= render 'new_comment' %>
 
     <%= render 'comments' %>
@@ -60,3 +59,5 @@
 
 
 </div>
+
+<% end %>
