--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -47,6 +47,8 @@
 
     <%= render 'new_comment' %>
 
+    <div class="alert alert-info" style="display:none" role= "alert"> A new comment was posted! </div>
+
     <%= render 'comments' %>
 
   </div>
