--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -32,6 +32,8 @@
     </div>
   </div>
 
+<div class=""><p><% @pageviews %></p></div>
+
 <%= params[:example_key] %>
 
 <!-- <div>Page Views: <#% @pageviews %></div> -->
