--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -10,7 +10,7 @@
   <div class="rated star-rating" data-score="<%= comment.rating %>"></div>
   <div class="customer-review-body">
     <p><%= comment.body %>
-      <% if signed_in? && current_user.admin? %>
+      <% if current_user && current_user.admin? %>
         <span class="destroy-icon"><%= link_to image_tag('delete.png', alt:"Destroy").html_safe, product_comment_path(comment.product, comment), method: :delete, data: {confirm: 'Are you sure?'} %></span>
       <% end %>
     </p>
