--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -75,7 +75,7 @@
 
 .products-index {
   width: 100vw;
-  background: url('eric-muhr-1311273-unsplash.jpg') no-repeat center;
+  // background: url('eric-muhr-1311273-unsplash.jpg') no-repeat center;
 }
 
 .products-all {
