--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,5 @@
 <div class="products-index">
-  <section class="products-all container">
+  <section class="products-all ">
 
     <h1>Products</h1>
 
