--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,12 +1,20 @@
-<% cache product do %>
+<!-- <#% cache product do %> -->
   <div class="col-sm-4">
     <div class="product-card">
       <%= link_to "#{image_tag(product.image_url, class: "product-image")}".html_safe, product %>
       <h3 class="product-name"><%= link_to product.name, product %></h3>
       <p class="product-color"><%= product.colour %></p>
       <h2 class="product-price"><%= number_to_currency(product.price.to_f)%></h2>
-      <p><%= link_to 'Show', product %> | <span><%= link_to 'Edit', edit_product_path(product) %></span> |
-      <span><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></span></p>
+
+      <p><%= link_to 'Show', product %>
+
+        <% if current_user && current_user.admin? %>
+          <span> | <%= link_to 'Edit', edit_product_path(product) %></span>
+          <span> | <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure you want to delete this product?' } %></span>
+        <% end %>
+
+      </p>
+
     </div>
   </div>
-<% end %>
+<!-- <#% end %> -->
