spec desc, cents, AjaxSuccess

--- a/app/assets/javascripts/site.js.erb
+++ b/app/assets/javascripts/site.js.erb
@@ -19,9 +19,9 @@ var refreshRating = function() {
 
 
 
-$(document).on('turbolinks:load', function(){
+$(document).on('turbolinks:load ajaxSuccess', function(){
   refreshRating();
-  
+
   $('.img-zoom').elevateZoom();
 
 });
